--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <br>
         <h3>Class 2024</h3>
     </div>
-     <img src="C:\Users\student.kateatsa76\Downloads\IMG_2968.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
+     <img src="https://github.com/nnombo/project-class-Hostetker/blob/main/IMG_2968.jpg?raw=true" class="w3-margin w3-circle" alt="Person" style="width:50%">
      
   </div>
 
